Fix alignment bug in /media masonry

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -88,11 +88,6 @@ nav {
 
 /* img */
 
-img {
-  outline: 2px solid #fff;
-  outline-offset: -4px;
-}
-
 .ongrid > img {
   grid-column: 2 / 5; /* Central column plus gutter */
 
